--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>Owen Earl Portfolio</title>
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://cdn.jsdelivr.net/gh/SebastianAigner/twemoji-amazing@1.0.0/twemoji-amazing.css" rel="stylesheet">
+    <meta charset="UTF-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <script src="tweets.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
@@ -284,7 +287,10 @@
     <p>An essay about how progressive communities can sometimes use exclusionary language.<br><a href="https://raw.githubusercontent.com/EwonRael/EwonRael.github.io/ef7a053e7c1580a51cb845bb27bd75ac8e4f00a6/writings/Thoughts%20on%20Elitist%20Language%20Within%20Progressive%20Communities.txt" target="_blank">Read&#x2192;</a></p>
     <br><br><br>
     <h2 id="twitter"><mark>Twitter</mark></h2>
-    <p>An essay about how progressive communities can sometimes use exclusionary language.<br><a href="https://twitter.com/EwonRael" target="_blank">View Twitter&#x2192;</a></p>
+    <p>I write a decant amount of Tweets. Some of them manage to be funny. It's a mix of <a href="https://twitter.com/EwonRael/status/946115329754791936" target="_blank">meta jokes</a>, <a href="https://twitter.com/EwonRael/status/1387464244543856643" target="_blank">absurdism</a>, <a href="https://twitter.com/EwonRael/status/1350361773560442882" target="_blank">observational comedy</a>, and <a href="https://twitter.com/EwonRael/status/1298725476161081344" target="_blank">puns</a>. There's some <a href="https://twitter.com/EwonRael/status/1468187275871797249" target="_blank">terrible ideas</a>, some <a href="https://twitter.com/EwonRael/status/1227343601493037059" target="_blank">unhinged rants</a>, and some <a href="https://twitter.com/EwonRael/status/1307084647566848007" target="_blank">poems</a>. Once, I made <a href="https://twitter.com/EwonRael/status/1346571066207051776" target="_blank">a joke about fonts that was so popular it probably got liked by someone you know</a>. I Tweet about <a href="https://twitter.com/search?q=%40ewonrael%20pigeon%20OR%20bird&src=typed_query&f=top" target="_blank">birds</a>, <a href="https://twitter.com/search?q=%40ewonrael%20capitalism%20OR%20capitalist%20OR%20money&src=typed_query&f=top" target="_blank">capitalism</a>, <a href="https://twitter.com/search?q=%40ewonrael%20dream&src=typed_query&f=top" target="_blank">dreams</a>, <a href="https://twitter.com/search?q=%40ewonrael%20food%20OR%20potato%20OR%20spaghetti%20OR%20taco%20OR%20cook&src=typed_query&f=top" target="_blank">food</a> and a bit too much about <a href="https://twitter.com/search?q=%40ewonrael%20scooby%20OR%20shaggy%20OR%20iconic&src=typed_query&f=top" target="_blank">Scooby Doo</a>. Many of my Tweets are mediocre, but some are so funny that I laugh when I read them to myself.</p><p>I have a feature on my website that displays a random tweet, which I like because just looking through my Twitter makes it hard to see older Tweets, so I'm reproducing that feature below.</p><p onclick="tweetRand()" id="tweetRand"><b><span>Click here for a random Tweet!</span></b></p><p><a href="https://twitter.com/EwonRael" target="_blank">View Twitter&#x2192;</a></p>
+    <br><br><br>
+    <h2 id="zeros"><mark>Zeros</mark></h2>
+    <p><i>Zeros</i> is a short science fiction story about a group of people who are able to send a very small amount of information back in time. The story follows their struggle to make sense of the information their future-selves send them. I wanted to explore this idea of knowing exactly how a story will end, but not knowing how to get from point A to point B. In this way <i>Zeros</i> is a little like a mystery. I also took this as an opportunity to explore character development.<br><a href="https://ewonrael.github.io/Zeros/story" target="_blank">Read&#x2192;</a></p>
     <br><br><br>
   </body>
 </html>
