--- a/Drawing Games/index.html
+++ b/Drawing Games/index.html
@@ -15,7 +15,7 @@ Made with love by Owen Earl
 	<div id="nameInput">
 		<h2>Name:
 		<input id="nameInputText" type="text" onkeyup="nameInputType(event)" autofocus="autofocus"></input></h2>
-		<button id="nameInputButton" disabled onclick="nameInputButton()">continue</button>
+		<button id="nameInputButton" disabled onclick="nameInputButton()">Continue</button>
 	</div>
 	<div id="gameInput" class="hidden">
 		<p id="date">Date: <u id="dateSpot">07/23/2022</u></p>
