--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -88,5 +88,11 @@ Made with love by Owen Earl
 	<div id="waiting">
 		<h2 id="waitingNote">Waiting for the previous player to finish up...</h2>
 	</div>
+	<div id="gallery" class="hidden hide">
+		<h2>Gallery</h2>
+		<div id="galleryBox"></div>
+		<div style="width: 40vw;">&nbsp;</div>
+		<button class="right">Finished!</button>
+	</div>
 </body>
 </html>
