--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -92,7 +92,27 @@ Made with love by Owen Earl
 		<h2>Gallery</h2>
 		<div id="galleryBox"></div>
 		<div style="width: 40vw;">&nbsp;</div>
-		<button class="right">Finished!</button>
+		<button class="right" onclick="location.href = 'thanks.html'">Finished!</button>
+	</div>
+	<div id="galleryItem" class="hidden hide">
+		<div class="drawOutline">
+			<svg id="galleryD1" viewBox="0 0 100 53"></svg>
+		</div>
+		<h3 id="galleryC1"></h3><br>
+		<div class="drawOutline">
+			<svg id="galleryD2" viewBox="0 0 100 53"></svg>
+		</div>
+		<h3 id="galleryC2"></h3><br>
+		<div class="drawOutline">
+			<svg id="galleryD3" viewBox="0 0 100 53"></svg>
+		</div>
+		<h3 id="galleryC3"></h3><br>
+		<div class="drawOutline">
+			<svg id="galleryD4" viewBox="0 0 100 53"></svg>
+		</div>
+		<h3 id="galleryC4"></h3>
+		
+		<button class="right" onclick="history.back()">Back to Gallery</button>
 	</div>
 </body>
 </html>
