--- a/Drawing Games/index.html
+++ b/Drawing Games/index.html
@@ -4,7 +4,7 @@ Made with love by Owen Earl
 <!DOCTYPE html>
 <html>
 <head>
-	<title>P2P</title>
+	<title>Drawing Games</title>
 	<link rel='stylesheet' href='style.css'/>
 	<link rel='stylesheet' href='fonts/fonts.css'/>
 	<script src="script.js"></script>
