--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -16,7 +16,7 @@ Made with love by Owen Earl
 <body>
 	<h1><a href="..">Scribblish</a></h1>
 	<div id="joinOrHost" class="hide">
-		<h2>Would you like to join an exsisting game, or host your own?</h2>
+		<h2>Would you like to join an exsisting game or host your own?</h2>
 		<button id="joinButton" onclick="joinButton()">Join</button><button id="hostButton" class="right" onclick="hostButton()">Host</button>
 	</div>
 	<div id="hostName" class="hidden hide">
