--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -81,7 +81,7 @@ Made with love by Owen Earl
 	</div>
 	<div id="drawSpace" class="hidden" onmousedown="drawMousedown = true">
 		<div id="rightblocker"></div><div id="leftblocker"></div>
-		<svg ontouchstart="drawMousedown = true" id="drawSVG" viewBox="0 0 100 53"></svg>
+		<svg id="drawSVG" viewBox="0 0 100 53"></svg>
 	</div>
 	<div id="drawLoad" class="hidden">
 		<svg id="loadSVG" viewBox="0 0 100 53"></svg>
