--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -93,7 +93,7 @@ Made with love by Owen Earl
 		<h2>Gallery</h2>
 		<div id="galleryBox"></div>
 		<div style="width: 40vw;">&nbsp;</div>
-		<button class="right" onclick="location.href = 'thanks.html'">Finished!</button>
+		<button class="right" onclick="finishGame()">Finished!</button>
 	</div>
 	<div id="galleryItem" class="hidden hide">
 		<div class="drawOutline">
