--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -8,6 +8,7 @@ Made with love by Owen Earl
 	<link rel='stylesheet' href='style.css'/>
 	<link rel='stylesheet' href='../fonts/fonts.css'/>
 	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+	<script src="html2canvas.js"></script>
 	<script src="script.js"></script>
 	<script src="host.js"></script>
 	<script src="guest.js"></script>
@@ -113,7 +114,7 @@ Made with love by Owen Earl
 		</div>
 		<h3 id="galleryC4"></h3>
 		
-		<button class="right" onclick="history.back()">Back to Gallery</button>
+		<button id="galleryBack" class="right" onclick="history.back()">Back to Gallery</button>
 	</div>
 </body>
 </html>
