--- a/Drawing Games/Scribblish/index.html
+++ b/Drawing Games/Scribblish/index.html
@@ -8,7 +8,6 @@ Made with love by Owen Earl
 	<link rel='stylesheet' href='style.css'/>
 	<link rel='stylesheet' href='../fonts/fonts.css'/>
 	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-	<script src="html2canvas.js"></script>
 	<script src="script.js"></script>
 	<script src="host.js"></script>
 	<script src="guest.js"></script>
@@ -31,54 +30,54 @@ Made with love by Owen Earl
 	</div>
 	<div id="caption1" class="hidden hide">
 		<h2>Write a caption for the next player to draw:</h2>
-		<h3 id="caption1C" contenteditable="true"></h3>
-		<button class="right" onclick="captionB(1)">Next</button>
+		<h3 id="caption1C" onkeyup="buttonEnable(this)" contenteditable="true"></h3>
+		<button class="right" disabled onclick="captionB(1)">Next</button>
 	</div>
 	<div id="drawing1" class="hidden hide">
 		<h2>Draw:</h2>
 		<div class="drawOutline"></div>
 		<h3 id="drawing1C">A big box of hamburgers being eaten by a sexy snake.</h3>
 		<button onclick="eraceSVG()">Clear</button>
-		<button class="right" onclick="drawingB(1)">Next</button>
+		<button class="right draw" disabled onclick="drawingB(1)">Next</button>
 	</div>
 	<div id="caption2" class="hidden hide">
 		<h2>Caption:</h2>
 		<div class="drawOutline"></div>
-		<h3 id="caption2C" contenteditable="true"></h3>
-		<button class="right" onclick="captionB(2)">Next</button>
+		<h3 id="caption2C" onkeyup="buttonEnable(this)" contenteditable="true"></h3>
+		<button class="right" disabled onclick="captionB(2)">Next</button>
 	</div>
 	<div id="drawing2" class="hidden hide">
 		<h2>Draw:</h2>
 		<div class="drawOutline"></div>
 		<h3 id="drawing2C">Second Caption... Heyo!</h3>
 		<button onclick="eraceSVG()">Clear</button>
-	<button class="right" onclick="drawingB(2)">Next</button>
+		<button class="right draw" onclick="drawingB(2)">Next</button>
 	</div>
 	<div id="caption3" class="hidden hide">
 		<h2>Caption:</h2>
 		<div class="drawOutline"></div>
-		<h3 id="caption3C" contenteditable="true"></h3>
-		<button class="right" onclick="captionB(3)">Next</button>
+		<h3 id="caption3C" onkeyup="buttonEnable(this)" contenteditable="true"></h3>
+		<button class="right" disabled onclick="captionB(3)">Next</button>
 	</div>
 	<div id="drawing3" class="hidden hide">
 		<h2>Draw:</h2>
 		<div class="drawOutline"></div>
 		<h3 id="drawing3C">third Caption... Heyo!</h3>
 		<button onclick="eraceSVG()">Clear</button>
-		<button class="right" onclick="drawingB(3)">Next</button>
+		<button class="right draw" onclick="drawingB(3)">Next</button>
 	</div>
 	<div id="caption4" class="hidden hide">
 		<h2>Caption:</h2>
 		<div class="drawOutline"></div>
-		<h3 id="caption4C" contenteditable="true"></h3>
-		<button class="right" onclick="captionB(4)">Next</button>
+		<h3 id="caption4C" onkeyup="buttonEnable(this)" contenteditable="true"></h3>
+		<button class="right" disabled onclick="captionB(4)">Next</button>
 	</div>
 	<div id="drawing4" class="hidden hide">
 		<h2>Draw:</h2>
 		<div class="drawOutline"></div>
 		<h3 id="drawing4C">fourth Caption... Heyo!</h3>
 		<button onclick="eraceSVG()">Clear</button>
-		<button class="right" onclick="drawing4B()">Next</button>
+		<button class="right draw" onclick="drawing4B()">Next</button>
 	</div>
 	<div id="drawSpace" class="hidden" onmousedown="drawMousedown = true">
 		<div id="rightblocker"></div><div id="leftblocker"></div>
