--- a/crossword/crossword01.html
+++ b/crossword/crossword01.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="style.css"/>
 		<script>let goal = "spasmhasteushersteerhandy"</script>
 		<script src="script.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=0.8">
+		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
 	</head>
 	<body>
 		<h1>square crosswords</h1>
@@ -64,4 +64,3 @@
 		</div>
 	</body>
 </html>
-
