--- a/crossword/crossword01.html
+++ b/crossword/crossword01.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>crossword 01</title>
+		<title>5x5 crossword 01</title>
 		<link rel="stylesheet" href="style.css"/>
 		<script>let goal = "spasmhasteushersteerhandy"</script>
 		<script src="script.js"></script>
+		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
+		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
+		<meta property="og:title" content="5x5 crossword 01" />
+		<meta property="og:description" content="The first five-by-five crossword in a series of ten." />
+		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1>square crosswords</h1>
@@ -64,4 +69,3 @@
 		</div>
 	</body>
 </html>
-
