--- a/crossword/index.html
+++ b/crossword/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>5x5 crossword 01</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "spasmhasteushersteerhandy"; let crossnum = 0</script>
+		<script>let goal = "spasmhasteushersteerhandy"</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
@@ -13,7 +13,7 @@
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
-		<h1><a href="index.html">square crosswords</a></h1>
+		<h1>square crosswords</h1>
 		<table id="crossword">
 			<tr>
 				<td contenteditable="true" id="1" onclick="toggle(1)" onfocus="clicked(1)" onfocusout="declicked(1)" oninput="change(1)">&nbsp;</td>
