--- a/crossword/index.html
+++ b/crossword/index.html
@@ -1,72 +1,58 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 01</title>
+		<title>5x5 crossword puzzles</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "spasmhasteushersteerhandy"</script>
-		<script src="script.js"></script>
+		<script src="homescript.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 01" />
-		<meta property="og:description" content="The first five-by-five crossword in a series of ten." />
+		<meta property="og:title" content="5x5 crossword puzzles" />
+		<meta property="og:description" content="A series of five-by-five crossword puzzles." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1>square crosswords</h1>
-		<table id="crossword">
+		<div id="explain">
+			<p>This is a series of five-by-five crossword puzzles. Click on a number to attempt the corresponding crossword. Solved puzzles will turn green.</p>
+		</div>
+		<table id="crosswordPicker">
 			<tr>
-				<td contenteditable="true" id="1" onclick="toggle(1)" onfocus="clicked(1)" onfocusout="declicked(1)" oninput="change(1)">&nbsp;</td>
-				<td contenteditable="true" id="2" onclick="toggle(2)" onfocus="clicked(2)" onfocusout="declicked(2)" oninput="change(2)">&nbsp;</td>
-				<td contenteditable="true" id="3" onclick="toggle(3)" onfocus="clicked(3)" onfocusout="declicked(3)" oninput="change(3)">&nbsp;</td>
-				<td contenteditable="true" id="4" onclick="toggle(4)" onfocus="clicked(4)" onfocusout="declicked(4)" oninput="change(4)">&nbsp;</td>
-				<td contenteditable="true" id="5" onclick="toggle(5)" onfocus="clicked(5)" onfocusout="declicked(5)" oninput="change(5)">&nbsp;</td>
+				<td id="1"><a href="crossword01.html">01</a></td>
+				<td id="2"><a href="crossword02.html">02</a></td>
+				<td id="3"><a href="crossword03.html">03</a></td>
+				<td id="4"><a href="crossword04.html">04</a></td>
+				<td id="5"><a href="crossword05.html">05</a></td>
 			</tr>
 			<tr>
-				<td contenteditable="true" id="6" onclick="toggle(6)" onfocus="clicked(6)" onfocusout="declicked(6)" oninput="change(6)">&nbsp;</td>
-				<td contenteditable="true" id="7" onclick="toggle(7)" onfocus="clicked(7)" onfocusout="declicked(7)" oninput="change(7)">&nbsp;</td>
-				<td contenteditable="true" id="8" onclick="toggle(8)" onfocus="clicked(8)" onfocusout="declicked(8)" oninput="change(8)">&nbsp;</td>
-				<td contenteditable="true" id="9" onclick="toggle(9)" onfocus="clicked(9)" onfocusout="declicked(9)" oninput="change(9)">&nbsp;</td>
-				<td contenteditable="true" id="10" onclick="toggle(10)" onfocus="clicked(10)" onfocusout="declicked(10)" oninput="change(10)">&nbsp;</td>
+				<td id="6"><a href="crossword06.html">06</a></td>
+				<td id="7"><a href="crossword07.html">07</a></td>
+				<td id="8"><a href="crossword08.html">08</a></td>
+				<td id="9"><a href="crossword09.html">09</a></td>
+				<td id="10"><a href="crossword10.html">10</a></td>
 			</tr>
 			<tr>
-				<td contenteditable="true" id="11" onclick="toggle(11)" onfocus="clicked(11)" onfocusout="declicked(11)" oninput="change(11)">&nbsp;</td>
-				<td contenteditable="true" id="12" onclick="toggle(12)" onfocus="clicked(12)" onfocusout="declicked(12)" oninput="change(12)">&nbsp;</td>
-				<td contenteditable="true" id="13" onclick="toggle(13)" onfocus="clicked(13)" onfocusout="declicked(13)" oninput="change(13)">&nbsp;</td>
-				<td contenteditable="true" id="14" onclick="toggle(14)" onfocus="clicked(14)" onfocusout="declicked(14)" oninput="change(14)">&nbsp;</td>
-				<td contenteditable="true" id="15" onclick="toggle(15)" onfocus="clicked(15)" onfocusout="declicked(15)" oninput="change(15)">&nbsp;</td>
+				<td id="11"><a href="crossword11.html">11</a></td>
+				<td id="12"><a href="crossword12.html">12</a></td>
+				<td id="13"><a href="crossword13.html">13</a></td>
+				<td id="14"><a href="crossword14.html">14</a></td>
+				<td id="15"><a href="crossword15.html">15</a></td>
 			</tr>
 			<tr>
-				<td contenteditable="true" id="16" onclick="toggle(16)" onfocus="clicked(16)" onfocusout="declicked(16)" oninput="change(16)">&nbsp;</td>
-				<td contenteditable="true" id="17" onclick="toggle(17)" onfocus="clicked(17)" onfocusout="declicked(17)" oninput="change(17)">&nbsp;</td>
-				<td contenteditable="true" id="18" onclick="toggle(18)" onfocus="clicked(18)" onfocusout="declicked(18)" oninput="change(18)">&nbsp;</td>
-				<td contenteditable="true" id="19" onclick="toggle(19)" onfocus="clicked(19)" onfocusout="declicked(19)" oninput="change(19)">&nbsp;</td>
-				<td contenteditable="true" id="20" onclick="toggle(20)" onfocus="clicked(20)" onfocusout="declicked(20)" oninput="change(20)">&nbsp;</td>
+				<td id="16"><a href="crossword16.html">16</a></td>
+				<td id="17"><a href="crossword17.html">17</a></td>
+				<td id="18"><a href="crossword18.html">18</a></td>
+				<td id="19"><a href="crossword19.html">19</a></td>
+				<td id="20"><a href="crossword20.html">20</a></td>
 			</tr>
 			<tr>
-				<td contenteditable="true" id="21" onclick="toggle(21)" onfocus="clicked(21)" onfocusout="declicked(21)" oninput="change(21)">&nbsp;</td>
-				<td contenteditable="true" id="22" onclick="toggle(22)" onfocus="clicked(22)" onfocusout="declicked(22)" oninput="change(22)">&nbsp;</td>
-				<td contenteditable="true" id="23" onclick="toggle(23)" onfocus="clicked(23)" onfocusout="declicked(23)" oninput="change(23)">&nbsp;</td>
-				<td contenteditable="true" id="24" onclick="toggle(24)" onfocus="clicked(24)" onfocusout="declicked(24)" oninput="change(24)">&nbsp;</td>
-				<td contenteditable="true" id="25" onclick="toggle(25)" onfocus="clicked(25)" onfocusout="declicked(25)" oninput="change(25)">&nbsp;</td>
+				<td id="21"><a href="crossword21.html">21</td>
+				<td id="22"><a href="crossword22.html">22</td>
+				<td id="23"><a href="crossword23.html">23</td>
+				<td id="24"><a href="crossword24.html">24</td>
+				<td id="25"><a href="crossword25.html">25</td>
 			</tr>
 		</table>
-		<div id="across">
-			<p><b>&nbsp;&nbsp;&nbsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&nbsp;Involuntary contraction</p>
-			<p onclick="pclick(6, true)">6.&nbsp;Something you make in a hurry!</p>
-			<p onclick="pclick(11, true)">7.&nbsp;To guide into an new era, alternatively, an escort</p>
-			<p onclick="pclick(16, true)">8.&nbsp;To guide, alternatively, one guided by a type of poke</p>
-			<p onclick="pclick(21, true)">9.&nbsp;Easily used</p>
-		</div>
-		<div id="down">
-			<p><b>&nbsp;&nbsp;&nbsp;Down</b></p>
-			<p onclick="pclick(1, false)">1.&nbsp;Something you do in a library</p>
-			<p onclick="pclick(2, false)">2.&nbsp;Italian butterflies?</p>
-			<p onclick="pclick(3, false)">3.&nbsp;Pale, anaemic, the color of burnt wood</p>
-			<p onclick="pclick(4, false)">4.&nbsp;The pride possesion of a type of poke</p>
-			<p onclick="pclick(5, false)">5.&nbsp;Something you make during winter holidays</p>
-		</div>
 	</body>
 </html>
 
