--- a/crossword/crossword01.html
+++ b/crossword/crossword01.html
@@ -53,20 +53,19 @@
 		</table>
 		<div id="across">
 			<p><b>&nbsp;&nbsp;&nbsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&nbsp;Involuntary contraction</p>
+			<p onclick="pclick(1, true)">1.&nbsp;Involuntary muscle contraction</p>
 			<p onclick="pclick(6, true)">6.&nbsp;Something you make in a hurry!</p>
-			<p onclick="pclick(11, true)">7.&nbsp;To guide into an new era, alternatively, an escort</p>
+			<p onclick="pclick(11, true)">7.&nbsp;An escort, perhaps a bill distributor</p>
 			<p onclick="pclick(16, true)">8.&nbsp;To guide, alternatively, one guided by a type of poke</p>
-			<p onclick="pclick(21, true)">9.&nbsp;Easily used</p>
+			<p onclick="pclick(21, true)">9.&nbsp;Easy to use</p>
 		</div>
 		<div id="down">
 			<p><b>&nbsp;&nbsp;&nbsp;Down</b></p>
 			<p onclick="pclick(1, false)">1.&nbsp;Something you do in a library</p>
-			<p onclick="pclick(2, false)">2.&nbsp;Italian butterflies?</p>
+			<p onclick="pclick(2, false)">2.&nbsp;Rotelle, farfalle, capellini, for instance</p>
 			<p onclick="pclick(3, false)">3.&nbsp;Pale, anaemic, the color of burnt wood</p>
-			<p onclick="pclick(4, false)">4.&nbsp;The pride possesion of a type of poke</p>
+			<p onclick="pclick(4, false)">4.&nbsp;A castrated cow</p>
 			<p onclick="pclick(5, false)">5.&nbsp;Something you make during winter holidays</p>
 		</div>
 	</body>
 </html>
-
