--- a/crossword/crossword02.html
+++ b/crossword/crossword02.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 01</title>
+		<title>5x5 crossword 02</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "spasmhasteushersteerhandy"; let crossnum = 0</script>
+		<script>let goal = "martaalarmniveaikeascents"; let crossnum = 1</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
 		<meta property="og:title" content="5x5 crossword 01" />
-		<meta property="og:description" content="The first five-by-five crossword in a series of twenty-five." />
+		<meta property="og:description" content="The second five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
@@ -53,19 +53,19 @@
 		</table>
 		<div id="across">
 			<p><b>&nbsp;&nbsp;&nbsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&nbsp;Involuntary muscle contraction</p>
-			<p onclick="pclick(6, true)">6.&nbsp;Something you make in a hurry!</p>
-			<p onclick="pclick(11, true)">7.&nbsp;An escort, perhaps a bill distributor</p>
-			<p onclick="pclick(16, true)">8.&nbsp;To guide, alternatively, one guided by a type of poke</p>
-			<p onclick="pclick(21, true)">9.&nbsp;Easy to use</p>
+			<p onclick="pclick(1, true)">1.&nbsp;She&rsquo;s going to be seven on tuesday, and she&rsquo;d like a pink parasol.</p>
+			<p onclick="pclick(6, true)">6.&nbsp;This is a wake-up call.</p>
+			<p onclick="pclick(11, true)">7.&nbsp;Clarins to the north-east</p>
+			<p onclick="pclick(16, true)">8.&nbsp;Makers of meatballs</p>
+			<p onclick="pclick(21, true)">9.&nbsp;Not a lot of change</p>
 		</div>
 		<div id="down">
 			<p><b>&nbsp;&nbsp;&nbsp;Down</b></p>
-			<p onclick="pclick(1, false)">1.&nbsp;Something you do in a library</p>
-			<p onclick="pclick(2, false)">2.&nbsp;Rotelle, farfalle, capellini, for instance</p>
-			<p onclick="pclick(3, false)">3.&nbsp;Pale, anaemic, the color of burnt wood</p>
-			<p onclick="pclick(4, false)">4.&nbsp;A castrated cow</p>
-			<p onclick="pclick(5, false)">5.&nbsp;Something you make during winter holidays</p>
+			<p onclick="pclick(1, false)">1.&nbsp;Pixie dream girl</p>
+			<p onclick="pclick(2, false)">2.&nbsp;Similar to similar</p>
+			<p onclick="pclick(3, false)">3.&nbsp;He quoth!</p>
+			<p onclick="pclick(4, false)">4.&nbsp;It's better than a trick!</p>
+			<p onclick="pclick(5, false)">5.&nbsp;Accumulate over time</p>
 		</div>
 	</body>
 </html>
