--- a/crossword/crossword01.html
+++ b/crossword/crossword01.html
@@ -64,7 +64,7 @@
 			<p onclick="pclick(1, false)">1.&nbsp;Something you do in a library</p>
 			<p onclick="pclick(2, false)">2.&nbsp;Rotelle, farfalle, capellini, for instance</p>
 			<p onclick="pclick(3, false)">3.&nbsp;Pale, anaemic, the color of burnt wood</p>
-			<p onclick="pclick(4, false)">4.&nbsp;A castrated cow</p>
+			<p onclick="pclick(4, false)">4.&nbsp;A prized horse</p>
 			<p onclick="pclick(5, false)">5.&nbsp;Something you make during winter holidays</p>
 		</div>
 	</body>
