--- a/crossword/crossword02.html
+++ b/crossword/crossword02.html
@@ -61,11 +61,11 @@
 		</div>
 		<div id="down">
 			<p><b>&nbsp;&nbsp;&nbsp;Down</b></p>
-			<p onclick="pclick(1, false)">1.&nbsp;Pixie dream girl</p>
+			<p onclick="pclick(1, false)">1.&nbsp;A type of pixie dream girl</p>
 			<p onclick="pclick(2, false)">2.&nbsp;Similar to similar</p>
 			<p onclick="pclick(3, false)">3.&nbsp;He quoth!</p>
 			<p onclick="pclick(4, false)">4.&nbsp;It's better than a trick!</p>
-			<p onclick="pclick(5, false)">5.&nbsp;Accumulate over time</p>
+			<p onclick="pclick(5, false)">5.&nbsp;Something I am doing with dead batteries</p>
 		</div>
 	</body>
 </html>
