--- a/crossword/crossword02.html
+++ b/crossword/crossword02.html
@@ -55,7 +55,7 @@
 			<p><b>&nbsp;&nbsp;&nbsp;Across</b></p>
 			<p onclick="pclick(1, true)">1.&nbsp;She&rsquo;s going to be seven on tuesday, and she&rsquo;d like a pink parasol.</p>
 			<p onclick="pclick(6, true)">6.&nbsp;This is a wake-up call.</p>
-			<p onclick="pclick(11, true)">7.&nbsp;Clarins to the north-east</p>
+			<p onclick="pclick(11, true)">7.&nbsp;For clearer skin</p>
 			<p onclick="pclick(16, true)">8.&nbsp;Makers of meatballs</p>
 			<p onclick="pclick(21, true)">9.&nbsp;Not a lot of change</p>
 		</div>
