--- a/crossword/crossword03.html
+++ b/crossword/crossword03.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 02</title>
+		<title>5x5 crossword 03</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "martaalarmniveaikeascents"; let crossnum = 1</script>
+		<script>let goal = "spinecanonallotleasedryer"; let crossnum = 2</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 02" />
-		<meta property="og:description" content="The second five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 03" />
+		<meta property="og:description" content="The third five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
@@ -53,19 +53,19 @@
 		</table>
 		<div id="across">
 			<p><b>&nbsp;&nbsp;&nbsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&nbsp;She&rsquo;s going to be seven on tuesday, and she&rsquo;d like a pink parasol.</p>
-			<p onclick="pclick(6, true)">6.&nbsp;This is a wake-up call.</p>
-			<p onclick="pclick(11, true)">7.&nbsp;For clearer skin</p>
-			<p onclick="pclick(16, true)">8.&nbsp;Makers of meatballs</p>
-			<p onclick="pclick(21, true)">9.&nbsp;Not a lot of change</p>
+			<p onclick="pclick(1, true)">1.&nbsp;Something ghosts chill?</p>
+			<p onclick="pclick(6, true)">6.&nbsp;It may sound like a big gun, but it shoots something other than metal balls.</p>
+			<p onclick="pclick(11, true)">7.&nbsp;To distribute or hand out</p>
+			<p onclick="pclick(16, true)">8.&nbsp;Tenet&rsquo;s contract</p>
+			<p onclick="pclick(21, true)">9.&nbsp;Sock-eating appliance</p>
 		</div>
 		<div id="down">
 			<p><b>&nbsp;&nbsp;&nbsp;Down</b></p>
-			<p onclick="pclick(1, false)">1.&nbsp;A type of pixie dream girl</p>
-			<p onclick="pclick(2, false)">2.&nbsp;Similar to similar</p>
-			<p onclick="pclick(3, false)">3.&nbsp;He quoth!</p>
-			<p onclick="pclick(4, false)">4.&nbsp;It&rsquo;s better than a trick!</p>
-			<p onclick="pclick(5, false)">5.&nbsp;Something I am doing with dead batteries</p>
+			<p onclick="pclick(1, false)">1.&nbsp;Hot liquid burn</p>
+			<p onclick="pclick(2, false)">2.&nbsp;Faint by comparison</p>
+			<p onclick="pclick(3, false)">3.&nbsp;Either dental work or a flush ornament</p>
+			<p onclick="pclick(4, false)">4.&nbsp;Rope loop</p>
+			<p onclick="pclick(5, false)">5.&nbsp;A command, alternatively, a key</p>
 		</div>
 	</body>
 </html>
