--- a/crossword/crossword03.html
+++ b/crossword/crossword03.html
@@ -56,7 +56,7 @@
 			<p onclick="pclick(1, true)">1.&emsp;Something ghosts chill?</p>
 			<p onclick="pclick(6, true)">6.&emsp;It may sound like a big gun, but it shoots something other than metal balls.</p>
 			<p onclick="pclick(11, true)">7.&emsp;To distribute or hand out</p>
-			<p onclick="pclick(16, true)">8.&emsp;Tenet&rsquo;s contract</p>
+			<p onclick="pclick(16, true)">8.&emsp;Tenant&rsquo;s contract</p>
 			<p onclick="pclick(21, true)">9.&emsp;Sock-eating appliance</p>
 		</div>
 		<div id="down">
