--- a/crossword/crossword04.html
+++ b/crossword/crossword04.html
@@ -62,10 +62,10 @@
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="pclick(1, false)">1.&emsp;Last name, <i>first name</i> last name.</p>
-			<p onclick="pclick(2, false)">2.&emsp;First word of the only organization training, equipping, and coordinating volunteer water quality monitors on a national scale.</p>
+			<p onclick="pclick(2, false)">2.&emsp;The <q>I</q> in IWLA (conservation organization)</p>
 			<p onclick="pclick(3, false)">3.&emsp;They will make you healthy, sick, or high.</p>
 			<p onclick="pclick(4, false)">4.&emsp;Eggs and ham</p>
-			<p onclick="pclick(5, false)">5.&emsp;Multiple Annus</p>
+			<p onclick="pclick(5, false)">5.&emsp;They leap occasionally</p>
 		</div>
 	</body>
 </html>
