--- a/crossword/crossword05.html
+++ b/crossword/crossword05.html
@@ -53,7 +53,7 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&emsp;starting in 1990, a required sidewalk feature (USA)</p>
+			<p onclick="pclick(1, true)">1.&emsp;starting in 1990, a common sidewalk feature (USA)</p>
 			<p onclick="pclick(6, true)">6.&emsp;Something you might have a fear of</p>
 			<p onclick="pclick(11, true)">7.&emsp;Pastas, often baked</p>
 			<p onclick="pclick(16, true)">8.&emsp;Eclectic mixtures</p>
