--- a/crossword/crossword06.html
+++ b/crossword/crossword06.html
@@ -64,7 +64,7 @@
 			<p onclick="pclick(1, false)">1.&emsp;Not shiny</p>
 			<p onclick="pclick(2, false)">2.&emsp;A reason you might need rubber</p>
 			<p onclick="pclick(3, false)">3.&emsp;Perhaps she lives in Jersey Shore, but perhaps she&rsquo;s moved to new horizons</p>
-			<p onclick="pclick(4, false)">4.&emsp;She&rsquo;s a JCS antagonist</p>
+			<p onclick="pclick(4, false)">4.&emsp;He&rsquo;s a Jesus Christ Superstar antagonist</p>
 			<p onclick="pclick(5, false)">5.&emsp;Soup scoop</p>
 		</div>
 	</body>
