--- a/crossword/crossword06.html
+++ b/crossword/crossword06.html
@@ -53,16 +53,16 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&emsp;Platinum, silver, or bronze, for instance</p>
+			<p onclick="pclick(1, true)">1.&emsp;A symbol of achievement in war or sport</p>
 			<p onclick="pclick(6, true)">6.&emsp;Capital One (formerly known as Verizon), FTX (formerly known as American Airlines), State Farm (formerly known as Philips), for instance</p>
 			<p onclick="pclick(11, true)">7.&emsp;It&rsquo;s what&rsquo;s poppin&rsquo;</p>
 			<p onclick="pclick(16, true)">8.&emsp;First period Schoenberg</p>
-			<p onclick="pclick(21, true)">9.&emsp;Rubber&rsquo;s namesake</p>
+			<p onclick="pclick(21, true)">9.&emsp;The effect of ubber&rsquo;s namesake</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="pclick(1, false)">1.&emsp;Not shiny</p>
-			<p onclick="pclick(2, false)">2.&emsp;A reason you might need rubber</p>
+			<p onclick="pclick(2, false)">2.&emsp;A reason you might need a rubber</p>
 			<p onclick="pclick(3, false)">3.&emsp;Perhaps she lives in Jersey Shore, but perhaps she&rsquo;s moved to new horizons</p>
 			<p onclick="pclick(4, false)">4.&emsp;He&rsquo;s a Jesus Christ Superstar antagonist</p>
 			<p onclick="pclick(5, false)">5.&emsp;Soup scoop</p>
