--- a/crossword/crossword07.html
+++ b/crossword/crossword07.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 06</title>
+		<title>5x5 crossword 07</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "medalarenatrendtonalerase"; let crossnum = 5</script>
+		<script>let goal = "abackfelonagaperupeesnarl"; let crossnum = 6</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 06" />
-		<meta property="og:description" content="The sixth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 07" />
+		<meta property="og:description" content="The seventh five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
@@ -53,19 +53,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="pclick(1, true)">1.&emsp;A symbol of achievement in war or sport</p>
-			<p onclick="pclick(6, true)">6.&emsp;Capital One (formerly known as Verizon), FTX (formerly known as American Airlines), State Farm (formerly known as Philips), for instance</p>
-			<p onclick="pclick(11, true)">7.&emsp;It&rsquo;s what&rsquo;s poppin&rsquo;</p>
-			<p onclick="pclick(16, true)">8.&emsp;First period Schoenberg</p>
-			<p onclick="pclick(21, true)">9.&emsp;The effect of rubber&rsquo;s namesake</p>
+			<p onclick="pclick(1, true)">1.&emsp;Often taken</p>
+			<p onclick="pclick(6, true)">6.&emsp;Serious crime convict</p>
+			<p onclick="pclick(11, true)">7.&emsp;Open wide!</p>
+			<p onclick="pclick(16, true)">8.&emsp;One a dollar will fetch you 82</p>
+			<p onclick="pclick(21, true)">9.&emsp;Could mean tangled hair or visible teeth</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="pclick(1, false)">1.&emsp;Not shiny</p>
-			<p onclick="pclick(2, false)">2.&emsp;A reason you might need a rubber</p>
-			<p onclick="pclick(3, false)">3.&emsp;Perhaps she lives in Jersey Shore, but perhaps she&rsquo;s moved to new horizons</p>
-			<p onclick="pclick(4, false)">4.&emsp;He&rsquo;s a Jesus Christ Superstar antagonist</p>
-			<p onclick="pclick(5, false)">5.&emsp;Soup scoop</p>
+			<p onclick="pclick(1, false)">1.&emsp;Several great distances</p>
+			<p onclick="pclick(2, false)">2.&emsp;Started</p>
+			<p onclick="pclick(3, false)">3.&emsp;Improvised raga preludes</p>
+			<p onclick="pclick(4, false)">4.&emsp;A horse dealer, especially a dishonest one</p>
+			<p onclick="pclick(5, false)">5.&emsp;Wedding proposal or housework?</p>
 		</div>
 	</body>
 </html>
