--- a/crossword/crossword07.html
+++ b/crossword/crossword07.html
@@ -55,8 +55,8 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="pclick(1, true)">1.&emsp;Often taken</p>
 			<p onclick="pclick(6, true)">6.&emsp;Serious crime convict</p>
-			<p onclick="pclick(11, true)">7.&emsp;Open wide!</p>
-			<p onclick="pclick(16, true)">8.&emsp;One a dollar will fetch you 82</p>
+			<p onclick="pclick(11, true)">7.&emsp;Open wide</p>
+			<p onclick="pclick(16, true)">8.&emsp;One dollar will fetch you 82</p>
 			<p onclick="pclick(21, true)">9.&emsp;Could mean tangled hair or visible teeth</p>
 		</div>
 		<div id="down">
