--- a/Drawing Games/index.html
+++ b/Drawing Games/index.html
@@ -21,7 +21,7 @@ Made with love by Owen Earl
 		<p id="date">Date: <u id="dateSpot">07/23/2022</u></p>
 		<p id="name" onclick="nameRemove()">Name: <u id="nameSpot">Owen Earl</u></p>
 		<br>
-		<h2><a href="Scribblish">Scribblish</a></h2>
+		<h2><a href="Captioner">Captioner</a></h2>
 		<h2><a href="About.html">About</a></h2>
 	</div>
 </body>
