--- a/crossword/crossword10.html
+++ b/crossword/crossword10.html
@@ -61,8 +61,8 @@
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="pclick(1, false)">1.&emsp;Something done to films or bread</p>
-			<p onclick="pclick(2, false)">2.&emsp;Where <i>real</i> men hang out?</p>
+			<p onclick="pclick(1, false)">1.&emsp;Something done to films or bread dough</p>
+			<p onclick="pclick(2, false)">2.&emsp;give in or collapse</p>
 			<p onclick="pclick(3, false)">3.&emsp;Almost nearly</p>
 			<p onclick="pclick(4, false)">4.&emsp;Something a union might get you</p>
 			<p onclick="pclick(5, false)">5.&emsp;Someone wise, perhaps?</p>
