--- a/crossword/crossword12.html
+++ b/crossword/crossword12.html
@@ -65,7 +65,7 @@
 			<p onclick="pclick(2, false)">2.&emsp;An alarm might make you?</p>
 			<p onclick="pclick(3, false)">3.&emsp;A children&rsquo;s game, similar to hopscotch, popular in New York</p>
 			<p onclick="pclick(4, false)">4.&emsp;Register or enlist (alternative spelling)</p>
-			<p onclick="pclick(5, false)" id="clue5">5.&emsp;Sierra <u>_____</u></p>
+			<p onclick="pclick(5, false)" id="clue5">5.&emsp;A director of cowboys</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
