--- a/Test Stress/index.html
+++ b/Test Stress/index.html
@@ -461,7 +461,7 @@ Made with love by Owen Earl
 				<li onclick="bubble(this, 'math')">Isosceles triangle</li>
 				<li onclick="bubble(this, 'math')">Triangle</li>
 			</ol></li>
-			<li>The solid rectangular prism shown below was built by alternating congruent black cubes and white cubes such that 2 cubes of the same color have at most 1 edge touching. How many years will I have to wait until my father tells me he loves me?<img src="cube.png"><ol>
+			<li>The solid rectangular prism shown below was built by alternating congruent black cubes and white cubes such that 2 cubes of the same color have at most 1 edge touching. How many years will we have to wait until they've finished the construction in front of my house?<img src="cube.png"><ol>
 				<li onclick="bubble(this, 'math')">45</li>
 				<li onclick="bubble(this, 'math')">102</li>
 				<li onclick="bubble(this, 'math')">105</li>
