--- a/Test Stress/index.html
+++ b/Test Stress/index.html
@@ -776,6 +776,7 @@ Made with love by Owen Earl
 			<p>You can reach us at: https://www.tiktok.com/legal/report/feedback or write us at TikTok Inc.: 10100 Venice Blvd., Culver City, CA 90232 , USA</p>
 			<br><br><br>
 		</div>
+		<div class="coll"></div>
 		<div class="coll">
 			<li>What state has jurisdiction?<ol>
 				<li onclick="bubble(this, 'reading')">California</li>
