--- a/Test Stress/index.html
+++ b/Test Stress/index.html
@@ -335,7 +335,7 @@ Made with love by Owen Earl
 				<li onclick="bubble(this, 'english')">Justin Trudeau</li>
 				<li onclick="bubble(this, 'english')">The Zodiac killer</li>
 			</ol></li>
-			<li>What are you going to do when the revolution starts?<ol>
+			<li>Where will you be found when the revolution starts?<ol>
 				<li onclick="bubble(this, 'english')">With my gun</li>
 				<li onclick="bubble(this, 'english')">with my trans lesbian commune</li>
 				<li onclick="bubble(this, 'english')">I will not live to see that day</li>
