--- a/crossword/crossword13.html
+++ b/crossword/crossword13.html
@@ -55,7 +55,7 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="pclick(1, true)">1.&emsp;Best type of breath to wait with</p>
 			<p onclick="pclick(6, true)">6.&emsp;<q>Love is too weak a word for the way I feel</q></p>
-			<p onclick="pclick(11, true)">7.&emsp;Monkey Business</p>
+			<p onclick="pclick(11, true)">7.&emsp;Monkey business, for example</p>
 			<p onclick="pclick(16, true)">8.&emsp;Just the kind of person that replies all on emails, drives the speed limit, or tries to talk to me while on public transit</p>
 			<p onclick="pclick(21, true)">9.&emsp;<i>Woman at her Toilet</i> painter (Dutch)</p>
 		</div>
